# DA-Python-Code-P9-OC

./: .flake8  .gitignore  README.md  cd  db.sqlite3  manage.py  pyproject.toml  python  requirements.txt  settings.json
BooksReview/: admin.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
authe/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
authe/migrations/: 0001_initial.py
flake8-report/: BooksReview.settings.report.html  BooksReview.settings.source.html  authe.migrations.0001_initial.report.html  authe.migrations.0001_initial.source.html  authe.migrations.0002_remove_user_followed_by_remove_user_follows_and_more.report.html  authe.migrations.0002_remove_user_followed_by_remove_user_follows_and_more.source.html  func.migrations.0001_initial.report.html  func.migrations.0001_initial.source.html  func.migrations.0002_alter_review_options_alter_ticket_options_and_more.report.html  func.migrations.0002_alter_review_options_alter_ticket_options_and_more.source.html  func.migrations.0003_alter_review_ticket.report.html  func.migrations.0003_alter_review_ticket.source.html  index.html
func/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
func/Templates/: accueil.html  create_review.html  create_ticket.html  create_ticket_review.html  delete_review.html  feed.html  ticket_delete.html
static/css/: style.css
templates/: base.html
templates/authe/: login.html  signup.html
templates/func/: create_review.html  create_standalone_review.html  create_ticket_review.html  delete_review.html  edit_review.html  feed.html  posts.html  (+5 more)
(+2 files in other folders)
